[workspace]
resolver = "2"
members = [
    "apps/concert",
    "apps/dao",
    "apps/dao-light",
    "apps/dutch-auction",
    "apps/escrow",
    "apps/feeds/channel",
    "apps/feeds/router",
    "apps/fungible-token",
    "apps/lottery",
    "apps/multitoken",
    "apps/non-fungible-token/nft",
    "apps/non-fungible-token/nft-marketplace",
    "apps/ping",
]
