[workspace]
resolver = "2"
members = [
    "dapps/concert",
    "dapps/dao",
    "dapps/dao-light",
    "dapps/dutch-auction",
    "dapps/escrow",
    "dapps/feeds/channel",
    "dapps/feeds/router",
    "dapps/fungible-token",
    "dapps/lottery",
    "dapps/multitoken",
    "dapps/non-fungible-token/nft",
    "dapps/non-fungible-token/nft-marketplace",
    "dapps/ping",
    "dapps/staking",
    "dapps/supply-chain",
]
